syntax = "proto3";

import "commontype/ClientInfo.proto";

package sessiondict;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.sessiondict.rpc.proto";
option java_outer_classname = "SessionDictServiceProtos";
option optimize_for = SPEED;

service SessionDictService {
  rpc dict (stream Session) returns (stream Quit);
  rpc kill (KillRequest) returns(KillReply);
}

message Session {
  uint64  reqId = 1;
  commontype.ClientInfo owner = 2;
  bool keep = 3;
}

message Quit {
  uint64  reqId = 1;
  commontype.ClientInfo owner = 2;
  commontype.ClientInfo killer = 3;
}

message KillRequest {
  uint64 reqId = 1;
  string tenantId = 2;
  string userId = 3;
  string clientId = 4;
  commontype.ClientInfo killer = 5;
}

message KillReply {
  enum Result{
    OK = 0;
    ERROR = 1;
  }
  uint64 reqId = 1;
  Result result = 2;
}